# oddo-zipcodebreakers

./: .env  .gitignore  README.md  index.html  main.py  output.txt  package.json  pyproject.toml  reset_db.py  tailwind.config.js  test_frontend.py
App/: database.py  main.py  models.py  oauth2.py  utils.py
App/routers/: auth.py
backend/: check_db_connection.py  main.py  pyproject.toml  reset_db.py  verify_backend.py
backend/App/: config.py  database.py  main.py  models.py  pydantic_settings.md
backend/App/routers/: google_auth.py  trips.py  users.py
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.mjs.timestamp-1767433339272-91296a7cfbec3.mjs
frontend/src/: Routes.jsx  index.jsx
frontend/src/api/: axios.js
frontend/src/components/: FloatingQuickTools.jsx
frontend/src/components/ui/: Button.jsx  MobileMenuToggle.jsx  NavigationItem.jsx  Select.jsx  SidebarNavigation.jsx
frontend/src/pages/budget-management/: index.jsx
frontend/src/pages/community/: PostDetails.jsx  index.jsx
frontend/src/pages/currency-converter/: index.jsx
frontend/src/pages/dashboard/: index.jsx
frontend/src/pages/google-callback/: index.jsx
frontend/src/pages/join-trip/: index.jsx
frontend/src/pages/landing/: index.jsx
frontend/src/pages/login/: index.jsx
frontend/src/styles/: tailwind.css
public/: manifest.json
src/: Routes.jsx
src/components/ui/: ContextualActionBar.jsx
src/pages/activity-management/: index.jsx
src/pages/budget-management/: index.jsx
src/pages/dashboard/: index.jsx
src/pages/login/: index.jsx
(+60 files in other folders)
